adds endpoints activate/deactivate user account
